<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/indivScoresHeader"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="321dp"
        android:layout_height="209dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gradeScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gradescore" />

        <TextView
            android:id="@+id/abilityScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abilityscore" />

        <TextView
            android:id="@+id/mentalScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mentalscore" />

        <TextView
            android:id="@+id/socialScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socialscore" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="89dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/finalScoreHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5"
            android:gravity="center"
            android:text="@string/final_score"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gradeFinal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/gradefinal" />

        <TextView
            android:id="@+id/scoreFinal"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/scorefinal" />

        <TextView
            android:id="@+id/passFail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/passfail"
            android:textSize="40sp" />

    </LinearLayout>

</LinearLayout>